--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
 <body>
 
+<img src="./Images/haber process.jpg" alt="A picture containing white balls of fertilizer." width="400" height="400"/>
+
 
 <h2>The Haber-Bosch Process</h2>
 
@@ -29,13 +31,20 @@
 <div id="history">
 <h3>History</h3>
 
+<img src="./Images/industry.jpg" alt="A picture containing a factory." width="300" height="300"/>
+
 <p>The Haber-Bosch process dates back a mere century. Industrialization during the late 19th and early 20th centuries had an immense impact on humankind. The period saw a drastic increase in world population, which required a simultaneous accrual of grain. Consequently, farmers began cultivating in regions largely unexplored agriculturally (e.g., Russia, Australia, et cetera). The farmers, who wished to reap quality crops in such places, aspired to introduce nitrogen to the soil, thus beginning the adoption of fossil nitrate and guano to enhance yield (Briney). With this impactful turning point in the worker's life came the increased need for improved developments, many of which were chemical. A synthetic attachment of nitrogen to the soil was at the forefront of many chemists' minds, with one chemist conquering the challenge on July 2, 1909, German scientist Fritz Haber. Haber uniquely synthesized ammonia by feeding gaseous nitrogen and hydrogen into a pressurized, heated iron tube over a catalyst of osmium (Briney). Carl Bosch then extended on this method, thus creating the "Haber-Bosch process" we know today. He endeavored to enhance Haber's idea to global proportions, erecting in 1912 a mammoth plant in Oppau, Germany. In five hours, Bosch's plant could synthesize one ton of liquid ammonia. It could generate twenty tons of nitrogen by 1914 (Briney).</p>
+
+<a href="#top">Back to Top</a>
+
 </div>
 
 
 
 <div id="process">
 <h3>Process</h3>
+
+<img src="./Images/chemistryset.jpg" alt="A picture containing a chemistry set." width="300" height="300"/>
 
 <p>When closely examining the process, one finds that it is nothing short of a miracle. The formula for the Haber-Bosch process is simple but crucial. We can summarize it with this straightforward equation: N2 + 3H2 ⇌ 2NH3. The process is remarkable because it accomplishes the difficult task of converting a stable molecule into a less stable one. The stable molecule, in this circumstance, is N2, the molecule which is more unstable in NH3. Erstwhile attempts to convert from the former to the latter blundered, mainly due to thermodynamic obstacles. The workaround, in this case, was Haber's iron catalyst mixed with a small quantity of aluminum. The high temperature and pressure at which the Haber-Bosch process conducts shifts the equilibrium to the right with great speed, favoring the 2NH3. While such a reaction would naturally shift left, the dismissal of ammonia allows for the opposite to occur (May).</p>
 </div>
@@ -44,6 +53,10 @@
 
 <div id="impact">
 <h3>Impact</h3>
+
+<img src="./Images/eutrophication.jpg" alt="A picture containing water." width="300" height="300"/>
+<img src="./Images/crowd.jpg" alt="A picture containing a city, people." width="300" height="300"/>
+
 
 <p>How has one seemingly paltry formula touched the world? If not for the Haber-Bosch process, the human population would likely be much less than the staggering 8 billion permeating the Earth today. An appraised half of the global population is alive thanks to nitrogen fertilizer, whose absence would have cost the lives of an estimated every other individual.</p>
 
@@ -88,7 +101,7 @@
 </ul>
 
 <footer>
-<p align="center">© 2021 HoffmanChemistryAcademy.com - All Rights Reserved. Last Updated : 11/09/2021 11:00:43</p>
+<p align="center">© 2021 HoffmanChemistryAcademy.com - All Rights Reserved. Last Updated : 11/09/2021 11:00:43 (this is mock copyright text)</p>
 </footer>
 
 </body>
