--- a/index.html
+++ b/index.html
@@ -2,14 +2,16 @@
 
 <head>
 <title>The Haber-Bosch Process</title>
+<link href="./resources/CSS/style.css" type="text/css" rel="stylesheet"/>
 <header>
 <div id="top">
-<h1 align="center">The Hoffman Chemistry Academy</h1>
+<h1 align="center"> <i class="fa-solid fa-flask"></i> The Hoffman Chemistry Academy <i class="fa-solid fa-flask"></i></h1>
 </div>
 </header>
 </head>
 
 <body>
+
 
 <!--This is the first downloaded from Pixabay-->
 <img src="./Images/haber process.jpg" alt="A picture containing white balls of fertilizer." width="400" height="400"/>
