Add changes to code.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link href="./resources/CSS/style.css" type="text/css" rel="stylesheet"/>
 <header>
 <div id="top">
-<h1 class="logo" align="center">The <span id="hoffman">H<span id="symbol"><i class="fas fa-atom"></i></span>ffman</span> <span id="c">C</span><span id="h">h</span><span id="e">e</span><span id="m">m</span><span id="i">i</span><span id="s">s</span><span id="t">t</span><span id="r">r</span><span id="y">y</span> Academy</h1>
+<h1 class="logo">The <span id="hoffman">H<span id="symbol"><i class="fas fa-atom"></i></span>ffman</span> <span id="c">C</span><span id="h">h</span><span id="e">e</span><span id="m">m</span><span id="i">i</span><span id="s">s</span><span id="t">t</span><span id="r">r</span><span id="y">y</span> Academy</h1>
 </div>
 </header>
 </head>
@@ -110,7 +110,7 @@
 
 <footer>
 <!--This is mock copyright text-->
-<p align="center">© 2021 HoffmanChemistryAcademy.com - All Rights Reserved. Last Updated : 11/09/2021 11:00:43 (this is mock copyright text)</p>
+<p class="copyright">© 2021 HoffmanChemistryAcademy.com - All Rights Reserved. Last Updated : 11/09/2021 11:00:43 (this is mock copyright text)</p>
 </footer>
 
 </body>
