--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <html>
 
 <head>
+<link href="./resources/CSS/style.css" rel="stylesheet"/>
 <script src="https://kit.fontawesome.com/863e0c2a04.js" crossorigin="anonymous"></script>
 <title>The Haber-Bosch Process</title>
-<link href="./resources/CSS/style.css" type="text/css" rel="stylesheet"/>
+
 <header>
 <div id="top">
-<h1 class="logo">The <span id="hoffman">H<span id="symbol"><i class="fas fa-atom"></i></span>ffman</span> <span id="c">C</span><span id="h">h</span><span id="e">e</span><span id="m">m</span><span id="i">i</span><span id="s">s</span><span id="t">t</span><span id="r">r</span><span id="y">y</span> Academy</h1>
+<h1 class="center"><span id="symbol"><i class="fas fa-atom"></i></span> The Hoffman <span id="chemistry"><span id="c"> C</span><span id="h">h</span><span id="e">e</span><span id="m">m</span><span id="i">i</span><span id="s">s</span><span id="t">t</span><span id="r">r</span><span id="y">y</span></span> Academy <span id="symbol"><i class="fas fa-atom"></i></span></h1>
 </div>
 </header>
 </head>
@@ -18,7 +19,7 @@
 <img src="./Images/haber process.jpg" alt="A picture containing white balls of fertilizer." width="400" height="400"/>
 
 
-<h2 class="heading">The Haber-Bosch Process</h2>
+<h2>The Haber-Bosch Process</h2>
 
 <p>Equilibrium plays a vital role in sustaining life as we know it. What is equilibrium? When a chemical reaction is at equilibrium, there is no difference in the reaction rates for both the products and reactants. Thus, the net quantities of the two also remain equal and unchanged. One may deem a reaction at equilibrium complete because it has acquired maximal conversion of reactants to products. Reactions at equilibrium are also "reversible," meaning at the point where the products materialize, they react once more, forming the previous reactants (Britannica). Many meaningful chemical reactions would be futile if not for the concept of equilibrium. One of which is the Haber-Bosch process. This recent development in the chemical world uniquely utilizes the idea of equilibrium to affect man tremendously.</p>
 
@@ -86,7 +87,7 @@
 
 <a href="#top">Back to Top</a>
 
-<p>~Written by Jaycob R. Hoffman</p>
+<p class="italic">~Written by Jaycob R. Hoffman</p>
 
 <h3>Bibliography</h3>
 <ul>
@@ -110,7 +111,7 @@
 
 <footer>
 <!--This is mock copyright text-->
-<p class="copyright">© 2021 HoffmanChemistryAcademy.com - All Rights Reserved. Last Updated : 11/09/2021 11:00:43 (this is mock copyright text)</p>
+<p class="center">© 2021 HoffmanChemistryAcademy.com - All Rights Reserved. Last Updated : 11/09/2021 11:00:43 (this is mock copyright text)</p>
 </footer>
 
 </body>
