--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
 <head>
 <link href="./resources/CSS/style.css" rel="stylesheet"/>
 <script src="https://kit.fontawesome.com/863e0c2a04.js" crossorigin="anonymous"></script>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Fauna+One&family=Playfair+Display&display=swap" rel="stylesheet">
 <title>The Haber-Bosch Process</title>
 
 <header>
 <div id="top">
-<h1 class="center"><span id="symbol"><i class="fas fa-atom"></i></span>The Hoffman<span id="chemistry"><span id="c"> C</span><span id="h">h</span><span id="e">e</span><span id="m">m</span><span id="i">i</span><span id="s">s</span><span id="t">t</span><span id="r">r</span><span id="y">y</span></span> Academy <span id="symbol"><i class="fas fa-atom"></i></span></h1>
+<h1 class="center"><span id="symbol"><i class="fas fa-atom"></i></span> The Hoffman<span id="chemistry"><span id="c"> C</span><span id="h">h</span><span id="e">e</span><span id="m">m</span><span id="i">i</span><span id="s">s</span><span id="t">t</span><span id="r">r</span><span id="y">y</span></span> Academy <span id="symbol"><i class="fas fa-atom"></i></span></h1>
 </div>
 </header>
 </head>
@@ -17,7 +20,7 @@
 
 
 <!--This is the first downloaded from Pixabay-->
-<img src="./Images/haber process.jpg" alt="A picture containing white balls of fertilizer." width="400" height="400"/>
+<img src="./Images/haber process.jpg" alt="A picture containing white balls of fertilizer." width="500" height="500"/>
 
 
 <h2>The Haber-Bosch Process</h2>
